--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,14 @@ li {
     margin-bottom: 5px;
 }
 
-@media (max-width: 600px) {
-    .left-column, .right-column {
-        width: 95%;
-    }
-
+@media (max-width: 768px) {
     .container {
         flex-direction: column;
+    }
+
+    .left-column, .right-column {
+        width: 100%;
+        margin: 0;
     }
 }
 
