--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,9 @@ body {
     background: #1c1c1c;
     width: 100%;
     font-size: 1.1em;
-    border-radius: 0.6em;
+    border-radius: 1.8em;
     align-items: center;
     gap: 1.6em;
-    color : #fffbfb
 }
 
 .intro img {
@@ -46,22 +45,12 @@ body {
     background: #1c1c1c;
     width: 100%;
     font-size: 16px;
-    border-radius: 0.6em;
+    border-radius: 1.8em;
 }
 
 .info-box h1, .project-box h1 {
     font-weight: bold;
     font-size: 1.2em;
-}
-
-.projects {
-    padding: 0.25em 1em;
-    margin: 1em;
-    display: block;
-    background: #1c1c1c;
-    width: 100%;
-    font-size: 16px;
-    border-radius: 0.6em;
 }
 
 .project-box {
@@ -71,7 +60,7 @@ body {
     background: #1c1c1c;
     width: 100%;
     font-size: 16px;
-    border-radius: 0.6em;
+    border-radius: 1.8em;
 }
 
 ul {
@@ -81,6 +70,10 @@ ul {
 
 li {
     margin-bottom: 5px;
+}
+
+p {
+    margin-top: -0.5em;
 }
 
 @media (max-width: 768px) {
