--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,50 @@ body {
     font: 14px/1.5 "Times New Roman";
     color: #fff;
     background: #131313;
+    overflow: hidden;
+
 }
 
 .container {
     display: flex;
-    width: 95%;
+    width: 100%;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     box-sizing: border-box;
-
+    height: 99vh;
 }
 
-.left-column, .right-column {
-    width: 48%;
-    padding: 1.2em;
+.left-column {
+    width: 32%;
+    box-sizing: border-box;
+    top: 0;
+    overflow: hidden;
+    position: sticky;
+    min-width: 300px;
+}
+
+.right-column {
+    width: 65%;
     box-sizing: border-box;
     margin: 0 1em 1em 0;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
-.intro {
-    padding: 1.3em 1em;
-    margin: 1em;
-    display: flex;
-    background: #1c1c1c;
-    width: 100%;
-    font-size: 1.1em;
-    border-radius: 1.8em;
+.left {
+    padding: 2em 1.5em;
     align-items: center;
+    flex-direction: column;
+    margin: 30em 0 0 1em;
+    display: flex;
+    width: 100%;
+    border-radius: 1.8em;
     gap: 1.6em;
 }
 
-.intro img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
+.left h1 {
+    color: #cd830f;
+    font: 4.5em/1.5 "name-font";
 }
 
 .info-box {
@@ -43,12 +53,13 @@ body {
     margin: 1em;
     display: block;
     background: #1c1c1c;
-    width: 100%;
+    width: 90%;
     font-size: 16px;
     border-radius: 1.8em;
 }
 
 .info-box h1, .project-box h1 {
+    color: #cd830f;
     font-weight: bold;
     font-size: 1.2em;
 }
@@ -77,14 +88,31 @@ p {
 }
 
 @media (max-width: 768px) {
-    .container {
-        flex-direction: column;
+    .left {
+        padding: 1em;
+        align-items: center;
     }
 
-    .left-column, .right-column {
-        width: 100%;
-        margin: 0;
+    .left h1 {
+        font-size: 2em;
     }
 }
+
+.github-page a {
+    position: relative;
+    bottom: 20px;
+    font-size: 16px;
+    color: #545454;
+    font-style: italic;
+    text-decoration: none;
+    text-align: center;
+
+}
+
+@font-face {
+    font-family: 'name-font';
+    src: url('/fonts/name-font.otf') format('opentype');
+}
+
 
 
