Revert "attempted fix"
This reverts commit e63166fb6bf34732edcd2b8c8d45704fed28b982.

--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,7 @@ p {
 
 @font-face {
     font-family: 'name-font';
-    src: url('https://ollie476.github.io/fonts/name-font.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    src: url('/fonts/name-font.otf') format('opentype');
 }
 
 
