--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
     color: #fff;
     background: #131313;
     overflow: hidden;
-
 }
 
 .container {
@@ -13,6 +12,13 @@ body {
     flex-wrap: nowrap;
     box-sizing: border-box;
     height: 99vh;
+}
+
+.container img {
+    width: 65%;
+    border-radius: 50%;
+    position: static; /* remove the relative positioning */
+    margin-top: 1em;   /* optional: adds spacing below the name */
 }
 
 .left-column {
@@ -36,16 +42,16 @@ body {
     padding: 2em 1.5em;
     align-items: center;
     flex-direction: column;
-    margin: 30em 0 0 1em;
-    display: flex;
-    width: 100%;
+    display: flex; width: 100%;
     border-radius: 1.8em;
     gap: 1.6em;
+    margin: 5em 0 0 -2em;
+    text-align: center;
 }
 
 .left h1 {
     color: #cd830f;
-    font: 4.5em/1.5 "name-font";
+    font: 4.5em "name-font";
 }
 
 .info-box {
@@ -98,15 +104,31 @@ p {
 }
 
 @media (max-width: 768px) {
-    .left {
-        padding: 1em;
-        align-items: center;
+    .container {
+        flex-direction: column;
+        height: auto;
     }
 
-    .left h1 {
-        font-size: 2em;
+    .left-column,
+    .right-column {
+        width: 100%;
+        margin: 0;
+    }
+
+    .left {
+        margin: 2em auto 0 auto;
+        padding: 1em;
+        align-items: center;
+        text-align: center;
+    }
+
+    .container img {
+        width: 60%;
+        max-width: 200px;
+        margin: 1em auto 0 auto;
     }
 }
+
 
 @font-face {
     font-family: 'name-font';
